// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Path matches a snapshot using Move and Cubic Bezier 1`] = `
<svg
  viewBox="0 0 200 100"
  height="100%"
  width="100%"
>
  <path
    d=" M 10, 90 C 30,90 25,10 50,10 S 70,90  90,90"
    fill="none"
    stroke="red"
  />
</svg>
`;

exports[`Path matches a snapshot using Move and Line 1`] = `
<svg
  viewBox="0 0 200 100"
  height="100%"
  width="100%"
>
  <path
    d=" M 10, 90 L 20, 100"
    fill="none"
    stroke="red"
  />
</svg>
`;
